# binary-star

./: binary-star.cabal
src/Data/Binary/: Star.hs
