name:                binary-star
version:             0.1
synopsis:            Pickler combinators built on top of Data.Binary.
description:         Efficient implementation of Andrew Kennedy's pickler combinators on top of Data.Binary.
category:            Data
license:             BSD3
license-file:        LICENSE
author:              Mikhail Glushenkov
maintainer:          the.dead.shall.rise@gmail.com
build-Depends:       base
ghc-options:         
