name:                binary-star
version:             0.1
synopsis:            Pickler combinators on top of Data.Binary.
description:         Efficient implementation of Andrew Kennedy's pickler combinators on top of Data.Binary.
category:            Data, Parsing
license:             BSD3
license-file:        LICENSE
author:              Mikhail Glushenkov
maintainer:          the.dead.shall.rise@gmail.com
homepage:            http://github.com/23Skidoo/binary-star/
stability:           provisional
build-type:          Simple
build-Depends:       base
Cabal-Version:       >= 1.2

library
    build-depends:      base
    hs-source-dirs:     src
    exposed-modules:    Data.Binary.Star
    ghc-options:        -O2
                        -Wall
